--- a/_posts/2017-11-26-SQL-intro.markdown
+++ b/_posts/2017-11-26-SQL-intro.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "SQL: 1. Cheat-Sheet"
+title: "SQL: 1 CRUD Cheat-Sheet"
 subtitle: ""
 date: 2017-11-26
 author: Sol
@@ -289,6 +289,8 @@ INSERT INTO users (username, first_name, last_name)
                     ("Shtefouille", "Furrer", "Stephanie");
 ```
 
+---
+
 ## 3. Update
 ### MAJ de toute une colonne
 
@@ -327,6 +329,8 @@ UPDATE users SET city = "Nivelles", num = 51 WHERE id = 329;
 UPDATE products SET eta = "SOLD OUT", availability = "In 1 Week" WHERE stock = 0; 
 ```
 
+---
+
 ## 4. Delete
 
 ### Supression toutes les données
@@ -350,6 +354,8 @@ DELETE FROM users WHERE email = "sol.rosca@poule.com";
 DELETE FROM products WHERE sotck = 0;
 ```
 
+---
+
 ## 5. Transactions
 
 ### Définitions
@@ -364,6 +370,3 @@ DELETE FROM products WHERE sotck = 0;
 * `BEGIN;`: Equivalent au précédent
 * `COMMIT;`: Appliquer les déclarations de la transaction aux données et switch autocommit on
 * `ROLLBACK;`: Reset la base de données à son état précédant la transaction
-
-
-
