--- a/_posts/2017-11-26-SQL-CRUD.markdown
+++ b/_posts/2017-11-26-SQL-CRUD.markdown
@@ -333,7 +333,8 @@ UPDATE products SET eta = "SOLD OUT", availability = "In 1 Week" WHERE stock = 0
 
 ## 4. Delete
 
-### Supression toutes les données
+### Supression toutes les données d'une table
+Supprime tous les enregistrements d'une table (La table ainsi que les headers existent toujours)
 
 ```
 DELETE FROM <table>;
@@ -352,6 +353,16 @@ DELETE FROM <table> WHERE <condition>;
 ```sql
 DELETE FROM users WHERE email = "sol.rosca@poule.com";
 DELETE FROM products WHERE sotck = 0;
+```
+
+### Supression d'une table
+
+```
+DROP TABLE <table>
+```
+
+```sql
+DROP TABLE orders
 ```
 
 ---
