maj cheat-sheet-SQL

--- a/_posts/2017-11-26-SQL-CRUD.markdown
+++ b/_posts/2017-11-26-SQL-CRUD.markdown
@@ -245,6 +245,8 @@ SELECT * FROM loans, books
 
 ### Fonctions
 
+> <span style="color:red"> Specific to SQLite? </span> 
+
 Fonction | Retoune 
 ---------|----------
  `AVG()` | moyenne d'une colonne | 
