--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -28,6 +28,10 @@ mathjax: true
 * [Fonctions dangereuses](https://www.kevinlondon.com/2015/07/26/dangerous-python-functions.html)
 * [OpenCV install guide (linux)](https://www.learnopencv.com/install-opencv3-on-ubuntu/)
 
+# Programmation asynchrone
+
+* [Must read!](https://zestedesavoir.com/articles/1568/decouvrons-la-programmation-asynchrone-en-python/)
+
 # Livres
 
 * [Python 101, livre complet en ligne](http://python101.pythonlibrary.org/g)
