--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -146,3 +146,11 @@ Tout simplement un petit afficheur pour communiquer des messages  simples avec l
 * "Dés que je peux je te laisse passer"
 * "Ne me colle pas, je finis de le dépasser et je me range"
 * ...
+
+# 3. Snippet highlighter 
+
+1. Basé sur le principe de [gitpitch](https://github.com/gitpitch/gitpitch/wiki) pour la présentation de snippets de code dans les slides qui permet de mettre en évidence les portions à présenter, créer un systeme (une API p-e?) de colorisation syntaxique pour les blogs qui puisse faire ça également. 
+
+2. Système de masquage de snippets trop longs qui se dévoilent au fur en higlitant les portions importantes flanqués de commentaires. [Point de départ?](https://getbootstrap.com/docs/4.0/components/collapse/#exampleAccordion1)
+
+Ensemble ces deux systèmes pourraient augmenter la qualité de présentation de nombreux tutoriels et permetre d'éviter des problèmes liés à la rédaction de ces derniers. Typiquement permettrait de gérer la situation où le rédacteur commence à emputer les snippets pour ne garder que les modifications ce qui reduit la lisibilité et embrouille les novices du sujet expliqué.
