--- a/_posts/2017-07-25-py-divers.markdown
+++ b/_posts/2017-07-25-py-divers.markdown
@@ -42,6 +42,13 @@ mathjax: true
 
 ## Color trackBack
 
+* [backtrace](https://github.com/nir0s/backtrace)
+* [colored-traceback](https://pypi.python.org/pypi/colored-traceback/0.2.0)
+
+
+
+
+
 * [ultratb.ColorTB() (IPython)](https://stackoverflow.com/questions/37081116/how-to-get-pythons-terminal-error-to-be-in-color)
 
 ```python
